# Xeres

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPARISON.md  Cargo.toml  LICENSE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  crm_demo.xrs  language-configuration.json  package.json  xeres.tmLanguage.json
.github/workflows/: ci.yml  perf.yml  release.yml
bench/: README.md  app.xrs  baseline.json  run.mjs
docs/: cookbook.md
examples/: acme.xrs  cart.xrs  counter.xrs  dashboard.xrs  login.xrs  login_db.xrs  order.xrs  router.xrs  theme_demo.xrs  todo.xrs  users.xrs  weather.xrs
examples/notes/: README.md  app.xrs
runtime/: crypto_prelude.rs  db_prelude.rs  decimal_prelude.rs  decimal_runtime.ts  http_prelude.rs  index_head.html  index_head_bleed.html  mount_runtime.ts  server_head.rs  server_main.rs  session_prelude.rs  sync_runtime.ts  sync_server.rs  theme_runtime.ts  uid_fn.ts
src/: backend.rs  checker.rs  codegen.rs  fmt.rs  frontend.rs  interp.rs  json.rs  lexer.rs  loader.rs  main.rs  middle.rs  parser.rs  protocol.rs  serve.rs  token.rs
src/backend/: codegen.rs
src/backend/codegen/: client.rs  index.rs  mod.rs  server.rs
src/frontend/: lexer.rs  parser.rs  token.rs
src/middle/: checker.rs  diagnostics.rs  loader.rs
src/middle/checker/: lower.rs  mod.rs  rules.rs
std/: math.xrs  text.xrs
tests/: accounts.xrs  card.xrs  data_layer.xrs  fail_api_dup_route.xrs  fail_api_get_body.xrs  fail_api_path_no_slash.xrs  fail_auth_on_component.xrs  fail_auth_route_no_session.xrs  fail_await_missing.xrs  fail_bind_nonstate.xrs  fail_checkbox_string.xrs  fail_closure_secret_leak.xrs  fail_collection_server.xrs  fail_component_arg.xrs  fail_component_lowercase.xrs  fail_component_not_pub.xrs  fail_component_secret.xrs  fail_component_unknown.xrs  fail_db_in_ui.xrs  fail_decimal_arg.xrs  fail_decimal_div.xrs  fail_decimal_float.xrs  fail_decimal_float_add.xrs  fail_declassify_client.xrs  fail_dup_screen.xrs  fail_endpoint_dynamic_host.xrs  fail_endpoint_in_ui.xrs  fail_endpoint_path.xrs  fail_enum_not_pub.xrs  fail_enum_unknown_variant.xrs  fail_filter_nonbool.xrs  fail_hash_in_ui.xrs  fail_idor_no_owner.xrs  fail_if_type.xrs  fail_import_private.xrs  fail_list_at_unwrapped.xrs  fail_log_secret.xrs  fail_match_nonexhaustive.xrs  fail_model_not_pub.xrs  fail_module_secret_cross.xrs  (+110 more)
tooling/create-xeres/: index.mjs  package.json
tooling/npm/xeres/: .gitignore  install.mjs  package.json
