[package]
name = "xeres"
version = "0.1.0"
edition = "2021"
description = "The Xeres compiler — tier-safe (server/ui) web language with a typed, compiler-enforced boundary."
license = "MIT"
repository = "https://github.com/xeres86/Xeres"

[[bin]]
name = "xeres"
path = "src/main.rs"

[profile.release]
opt-level = 3
