[package]
name = "xeres"
version = "0.5.10"
edition = "2021"
description = "The Xeres compiler — tier-safe (server/ui) web language with a typed, compiler-enforced boundary."
license = "MIT"
repository = "https://github.com/xeres86/Xeres"

[[bin]]
name = "xeres"
path = "src/main.rs"

[features]
default = []
# Database support for `xeres serve` (the Postgres driver). Released binaries
# are built with this on; local dev builds default off (no C toolchain needed).
db = ["dep:postgres", "dep:postgres-native-tls", "dep:native-tls"]
# Auth builtins hash()/verify() (Argon2id) + signed `session` cookies
# (HMAC-SHA256) for `xeres serve`. Same rationale as `db`: optional so the
# default build stays dependency-free.
auth = ["dep:argon2", "dep:hmac", "dep:sha2"]
# Outbound HTTP for declared `endpoint`s (R26). Optional like `db`/`auth`.
http = ["dep:ureq"]
# Batteries-included: what released binaries build with.
full = ["db", "auth", "http"]

[dependencies]
postgres = { version = "0.19", optional = true }
postgres-native-tls = { version = "0.5", optional = true }
native-tls = { version = "0.2", optional = true }
argon2 = { version = "0.5", features = ["std"], optional = true }
hmac = { version = "0.13", optional = true }
sha2 = { version = "0.11", optional = true }
ureq = { version = "2", optional = true }
# App-listener TLS for `xeres serve --tls`. Pure-Rust rustls with the `ring`
# backend (no OpenSSL/system deps); always built into the compiler so `--tls`
# works without a special build. This is the app's HTTPS listener — unrelated to
# the `native-tls` the `db` Postgres client pulls in.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"

[profile.release]
opt-level = 3
